# mato

./: AGENTS.md  CHANGELOG.md  Cargo.toml  DOCUMENTATION_VERIFICATION.md  README.md  config.example.toml  install.sh
.github/workflows/: release.yml  website-vercel.yml
Formula/: mato.rb
docs/: ACTIVITY_INDICATORS.md  AI_AGENT_FRIENDLY.md  IDLE_DETECTION.md  KEYBOARD_SHORTCUTS.md  PERSISTENCE_BEHAVIOR.md  RECORDING_DEMO.md  SPINNER_LOGIC.md  TERMINAL_PERSISTENCE.md  TERMINAL_RESIZE_STRATEGY.md  TESTING.md  demo-placeholder.txt
docs/agents/: README.md  RELEASE_GUIDE.md  TESTING.md
docs/changelog/: 2026-02-20_completion-analysis.md  2026-02-20_phase4-implementation-plan.md  2026-02-20_tmux-daemon-analysis.md  2026-02-21_idle-tab-detection.md  2026-02-21_refactoring-plan.md  2026-02-21_todo-audit-clippy-and-tab-title-separation.md  2026-02-22_activity-indicators.md  2026-02-22_alacritty-emulator.md  2026-02-22_desk-terminology.md  2026-02-22_onboarding-office-name-simplification.md  2026-02-22_p0-core-experience.md  2026-02-22_release-workflow-branch-policy-and-readme-use-cases.md  2026-02-22_shell-experience-jump-mode-and-system-theme-polish.md  2026-02-22_terminal-rendering-overhaul-and-bell-forwarding.md  2026-02-22_themes-settings-update-check.md  2026-02-23_refactor-app-extract-jump-status.md  2026-02-23_rename-input-cursor-editing.md  2026-02-23_terminal-multicore-bugs.md  2026-02-23_v0.8.1-release.md  2026-02-23_v0.9.1-release.md  2026-02-23_v0.9.2-release.md  2026-02-24_todos-roadmap-audit.md  README.md
docs/release-notes/: FINAL_SUMMARY.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.7.1.md  RELEASE_NOTES_v0.8.1.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v0.9.2.md  RELEASE_NOTES_v0.9.5.md  RELEASE_NOTES_v0.9.6.md  RELEASE_SUMMARY_v0.2.0.md  RELEASE_SUMMARY_v0.4.0.md  RELEASE_SUMMARY_v0.5.0.md  RELEASE_SUMMARY_v0.6.0.md  RELEASE_SUMMARY_v0.7.0.md  RELEASE_SUMMARY_v0.7.1.md  RELEASE_SUMMARY_v0.8.1.md  RELEASE_SUMMARY_v0.9.0.md  RELEASE_SUMMARY_v0.9.2.md  RELEASE_SUMMARY_v0.9.5.md  RELEASE_SUMMARY_v0.9.6.md
docs/todos/: FUTURE_STATE_PERSISTENCE.md  README.md  TODO.md  performance.md  (+1 more)
manager-tui/: Cargo.toml
src/: app.rs  config.rs  error.rs  id.rs  input.rs  lib.rs  main.rs  passthrough.rs  persistence.rs  protocol.rs  pty_provider.rs  terminal.rs  terminal_emulator.rs  terminal_provider.rs  theme.rs  ui.rs
templates/: README.md  data-scientist.json  financial-trader.json  fullstack-developer.json  hr-admin.json  i18n.json  marketing-ops.json  minimal.json  one-person-company.json  power-user.json  solo-developer.json
tests/: README.md  app_tests.rs  config_tests.rs  daemon_persistence_tests.rs  daemon_tests.rs  input_tests.rs  integration_tests.rs  protocol_tests.rs  run_persistence_tests.sh  screen_diff_tests.rs  suspend_resume_integration_tests.rs  terminal_persistence_tests.rs  terminal_test.sh  test_reload.sh  theme_tests.rs  ui_snapshot_tests.rs  utils_tests.rs  vt100_emulator_tests.rs
website/: package-lock.json  package.json  pnpm-lock.yaml
(+60 files in other folders)
