[package]
name = "mato"
version = "0.9.3"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Multi-Agent Terminal Office - A daemon-based persistent terminal multiplexer"
homepage = "https://github.com/mr-kelly/mato"
repository = "https://github.com/mr-kelly/mato"
license = "MIT"
keywords = ["terminal", "multiplexer", "tui", "daemon", "ratatui"]
categories = ["command-line-utilities"]

[[bin]]
name = "mato"
path = "src/main.rs"

[lib]
name = "mato"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.8"
vt100 = "0.15"
alacritty_terminal = "0.25"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5"
dashmap = "6"
parking_lot = "0.12"
daemonize = "0.5"
chrono = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
signal-hook = "0.3"
semver = "1"
unicode-width = "0.2"
rmp-serde = "1.3.1"

[dev-dependencies]
insta = "1"
