[package]
name = "mato"
version = "0.9.4"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Multi-Agent Terminal Office - A daemon-based persistent terminal multiplexer"
homepage = "https://github.com/mr-kelly/mato"
repository = "https://github.com/mr-kelly/mato"
license = "MIT"
keywords = ["terminal", "multiplexer", "tui", "daemon", "ratatui"]
categories = ["command-line-utilities"]

[[bin]]
name = "mato"
path = "src/main.rs"

[lib]
name = "mato"
path = "src/lib.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.9"
vt100 = "0.16"
alacritty_terminal = "0.25"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "6"
dashmap = "6"
parking_lot = "0.12"
daemonize = "0.5"
chrono = "0.4"
reqwest = { version = "0.13", default-features = true }
signal-hook = "0.4"
semver = "1"
unicode-width = "0.2"
rmp-serde = "1.3.1"
